topic_list: Limit number of unread topics shown at once.
This avoids a stream having potentially near-infinite height when
opened in a stream with a large number of unread topics; the benefit
is that you can easily access the next stream.

We show an unread count next to "more unread topics" to make it hard
to miss.

Needs CSS work to make the count align properly and ideally some
tests.

Fixes #13087.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -39,8 +39,10 @@ $topic_indent: calc($far_left_gutter_size + $left_col_size + 4px);
     font-size: 14px;
 }
 
-li.show-more-topics a {
-    font-size: 12px;
+li.show-more-topics {
+    a {
+        font-size: 12px;
+    }
 }
 
 #left-sidebar #user-list,
@@ -242,6 +244,11 @@ li.top_left_starred_messages {
     font-weight: normal;
     letter-spacing: 0.6px;
     border-radius: 4px;
+}
+
+.show-more-topics .topic-unread-count {
+    /* TODO: Fix the vertical alignment here */
+    margin-right: 30px;
 }
 
 /* Starred messaged counts aren't really unread
@@ -469,6 +476,7 @@ li.expanded_private_message a {
 }
 
 .zero-pm-unreads .pm-box,
+.zero-topic-unreads .more-topics-box,
 .zero-topic-unreads .topic-box {
     margin-right: 15px;
 }
