--- a/static/templates/more_topics.hbs
+++ b/static/templates/more_topics.hbs
@@ -1,5 +1,10 @@
-<li class="show-more-topics bottom_left_row">
-    <a href="#">{{t "more topics" }}</a>
+<li class="show-more-topics bottom_left_row {{#unless more_topics_unreads}}zero-topic-unreads{{/unless}}">
+    <span class='more-topics-box'>
+        <a href="#">{{t "more topics" }}</a>
+        <div class="topic-unread-count {{#unless more_topics_unreads}}zero_count{{/unless}}">
+            <div class="value">{{more_topics_unreads}}</div>
+        </div>
+    </span>
 </li>
 <li class="searching-for-more-topics">
     <img src="/static/images/loading-ellipsis.svg" alt="" />
